--- a/生成式对抗网络GAN.ipynb
+++ b/生成式对抗网络GAN.ipynb
@@ -3,16 +3,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "![](https://raw.githubusercontent.com/Qinbf/tf-model-zoo/master/README_IMG/01.jpg)\n",
-    "AI MOOC： **www.ai-xlab.com**  \n",
-    "如果你也是AI爱好者，可以添加我的微信一起交流：**sdxxqbf**"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### GAN介绍\n",
@@ -10282,15 +10280,21 @@
     "\n",
     "    # 定义对抗模型\n",
     "    def adversarial_model(self):\n",
+    "        ### --------------------------------------###\n",
+    "        ### 函数功能解释，进行一个对抗模型的生成\n",
+    "        ### --------------------------------------###\n",
+    "        \n",
+    "        ##预判断模型存在性\n",
     "        if self.AM:\n",
     "            return self.AM\n",
     "        # 定义优化器\n",
     "        optimizer = RMSprop(lr=0.0001, decay=3e-8)\n",
     "        # 构建模型\n",
     "        self.AM = Sequential()\n",
-    "        # 生成器\n",
+    "        # 在Sequential里加入生成器模型\n",
     "        self.AM.add(self.generator())\n",
-    "        # 判别器\n",
+    "        # 继续在Sequential里加入判决器\n",
+    "        # 即先进行生成再判决\n",
     "        self.AM.add(self.discriminator())\n",
     "        self.AM.compile(loss='binary_crossentropy', optimizer=optimizer, metrics=['accuracy'])\n",
     "        return self.AM\n",
@@ -10322,78 +10326,105 @@
     "\n",
     "    # 训练模型\n",
     "    def train(self, train_steps=2000, batch_size=256, save_interval=0):\n",
-    "        noise_input = None\n",
-    "        if save_interval>0:\n",
+    "        noise_input = None##一开始并没有噪声\n",
+    "        if save_interval>0:#从第2个循环开始\n",
     "            # 生成16个100维的噪声数据\n",
     "            noise_input = np.random.uniform(-1.0, 1.0, size=[16, 100])\n",
+    "            ## 加入随机高斯噪声 因为生成器的输入维度为100，此处即是生成16个随机数据样本，训练过后是16张图片\n",
     "        for i in range(train_steps):\n",
-    "        # 训练判别器，提升判别能力\n",
-    "            # 随机得到一个batch的图片数据\n",
+    "            # 训练判别器，提升判别能力，先对判决器进行训练\n",
+    "            # 随机得到一个batch的图片数据，从(0,总样本量)的集合中随机取出批次数的训练样本\n",
     "            images_train = self.x_train[np.random.randint(0, self.x_train.shape[0], size=batch_size), :, :, :]\n",
     "            # 随机生成一个batch的噪声数据\n",
     "            noise = np.random.uniform(-1.0, 1.0, size=[batch_size, 100])\n",
     "            # 生成伪造的图片数据\n",
-    "            images_fake = self.generator.predict(noise)\n",
+    "            images_fake = self.generator.predict(noise) ##借噪声以生成假图片\n",
     "            # 合并一个batch的真实图片和一个batch的伪造图片\n",
-    "            x = np.concatenate((images_train, images_fake))\n",
+    "            x = np.concatenate((images_train, images_fake))##将真实训练图片与伪装图片进行合并，合并到一个数据批次中\n",
+    "            #已解决 # ？？？此处因为这里有一半的数据，故而准确率的理想值为0.5？？，但是感觉emm这里明明标签是正确的不该是1.0吗？\n",
+    "            #已解决 # ？？？如果是对抗模型的话，那也没有真实数据的输入呀，显示的是d_loss应该是这里，有点搞不明白\n",
+    "            # 原因：因为进行判决的时候，这里是有生成器传送过来的虚假图的，占比一半，故而如果伪造得好，即所有的图片都是（像）真\n",
+    "            #       所以，那一半的假值，就被当成真的来预测了，故而就只有0.5的准确率\n",
+    "            # 注意 这里是合并到x中，病不是合并到x_batch中，所以数据不会一直变大\n",
+    "            \n",
     "            # 定义标签，真实数据的标签为1，伪造数据的标签为0\n",
+    "            # 将所有标签都标识成1，而后将后一半的假图片标识为0，\n",
+    "            #  即完成对所有图片的标识,\n",
+    "            # 这样加标签的优点，可以在每批次将噪声数据加入\n",
     "            y = np.ones([2*batch_size, 1])\n",
     "            y[batch_size:, :] = 0\n",
+    "            \n",
+    "            \n",
     "            # 把数据放到判别器中进行判断\n",
-    "            d_loss = self.discriminator.train_on_batch(x, y)\n",
+    "            # 使用train_on_batch方法进行训练，注意这里的训练样本为x，label为刚刚生成的y，故而batch数据大小均为2倍预设值，不会越变越大\n",
+    "            d_loss = self.discriminator.train_on_batch(x, y) ##compile中加入了metrics，train_on_batch的返回值为一个数组，[0]为loss，[1]为metrics\n",
     "        \n",
-    "        # 训练对抗模型，提升生成器的造假能力\n",
+    "        # 训练对抗模型，提升生成器的造假能力 How？\n",
+    "        # 告诉判决器所有的都是真图（但是里面全是生成的假图片），即企图欺骗\n",
+    "        # 如若损失值很小，即表示假图被识别成真图很多，即生成器伪装能力很强，\n",
+    "        # 私以为 这样训练生成器的时候，判决器的参数也会调整\n",
     "            # 标签都定义为1\n",
     "            y = np.ones([batch_size, 1])\n",
+    "            # 因为全是真（意欲欺骗成功，此处准确率acc可理解为欺骗成功率）\n",
     "            # 生成一个batch的噪声数据\n",
     "            noise = np.random.uniform(-1.0, 1.0, size=[batch_size, 100])\n",
     "            # 训练对抗模型\n",
     "            a_loss = self.adversarial.train_on_batch(noise, y)\n",
     "            # 打印判别器的loss和准确率，以及对抗模型的loss和准确率\n",
-    "            log_mesg = \"%d: [D loss: %f, acc: %f]\" % (i, d_loss[0], d_loss[1])\n",
-    "            log_mesg = \"%s  [A loss: %f, acc: %f]\" % (log_mesg, a_loss[0], a_loss[1])\n",
-    "            print(log_mesg)\n",
+    "            log_mesg = \"%d: [D loss: %f, acc: %f]\" % (i, d_loss[0], d_loss[1]) #存入次数，判决器的损失函数和准确率\n",
+    "            log_mesg = \"%s  [A loss: %f, acc: %f]\" % (log_mesg, a_loss[0], a_loss[1])#将前面的信息拼接上对抗模型（即生成器的）损失函数和准确率\n",
+    "            print(log_mesg)# 输出存储的信息文本\n",
     "            # 如果需要保存图片\n",
     "            if save_interval>0:\n",
-    "                # 每save_interval次保存一次\n",
-    "                if (i+1)%save_interval==0:\n",
+    "                # 如若间隔值大于0（这里用以防错），用于预防间隔设定为0出现除数为零报错，为负出现计算错误\n",
+    "                if 0 == (i+1)%save_interval:#间隔值为零 进行图片的操作（存储）\n",
     "                    self.plot_images(save2file=True, samples=noise_input.shape[0], noise=noise_input, step=(i+1))\n",
     "\n",
     "    # 保存图片\n",
     "    def plot_images(self, save2file=False, fake=True, samples=16, noise=None, step=0):\n",
-    "        filename = 'mnist.png'\n",
-    "        if fake:\n",
-    "            if noise is None:\n",
-    "                noise = np.random.uniform(-1.0, 1.0, size=[samples, 100])\n",
-    "            else:\n",
-    "                filename = \"mnist_%d.png\" % step\n",
+    "        ### --------------------------------------------------------------------------------------------- ###\n",
+    "        ### 函数说明\n",
+    "        ### 参数save2file = False是否存储图像文件（默认为不存储） fake = True？？？这个待定，还没看懂\n",
+    "        ### samples=16 默认显示样本的数量为16 noise=None 默认没有设定生成噪声源，也可以自行设定，需要注意噪声源大小匹配样本数量\n",
+    "        ### 噪声这里 可以考虑默认设为高斯噪声，有一个范例的话，方便用户输入，此处应该好可以进行加强\n",
+    "        ### step=0 ？？？没看懂\n",
+    "        ### --------------------------------------------------------------------------------------------- ###\n",
+    "        \n",
+    "        filename = 'mnist.png'##设定文件名称\n",
+    "        \n",
+    "        if fake:#若开启假数据\n",
+    "            if noise is None:#如果没有噪声，就进行噪声的生成（即进行噪声有无的判断，增加代码的健壮性）\n",
+    "                noise = np.random.uniform(-1.0, 1.0, size=[samples, 100])#则生成样本数个随机高斯噪声\n",
+    "            else:#若自带了噪声\n",
+    "                filename = \"mnist_%d.png\" % step ##将文件名命名为mnist_次数.png\n",
     "            # 生成伪造的图片数据\n",
-    "            images = self.generator.predict(noise)\n",
-    "        else:\n",
-    "            # 获得真实图片数据\n",
-    "            i = np.random.randint(0, self.x_train.shape[0], samples)\n",
-    "            images = self.x_train[i, :, :, :]\n",
+    "            images = self.generator.predict(noise)##生成伪装图像\n",
+    "            \n",
+    "        else:#若不开启假数据\n",
+    "            # 获得真实图片数据，随机从样本中取出样本个数个图片\n",
+    "            i = np.random.randint(0, self.x_train.shape[0], samples)#次数生成随机索引\n",
+    "            images = self.x_train[i, :, :, :]#此处按索引取出？？？喵喵喵？还能用一个list来取值？？此处存疑\n",
     "\n",
     "        # 设置图片大小\n",
     "        plt.figure(figsize=(10,10))\n",
     "        # 生成16张图片\n",
-    "        for i in range(images.shape[0]):\n",
-    "            plt.subplot(4, 4, i+1)\n",
+    "        for i in range(images.shape[0]):# 取出样本总数的数据，即进行样本数次循环\n",
+    "            plt.subplot(4, 4, i+1)#由于是生成16张图片，4行4列，目前的位置是第几（由于此处的序列不从0开始，故而+1）\n",
     "            # 获取一个张图片数据\n",
-    "            image = images[i, :, :, :]\n",
+    "            image = images[i, :, :, :]#取出第i张\n",
     "            # 变成2维的图片\n",
-    "            image = np.reshape(image, [self.img_rows, self.img_cols])\n",
+    "            image = np.reshape(image, [self.img_rows, self.img_cols])##此处取出的数据应是4维数据，[0]and[3]都是1，可以不用管直接取中间\n",
     "            # 显示灰度图片\n",
     "            plt.imshow(image, cmap='gray')\n",
     "            # 不显示坐标轴\n",
     "            plt.axis('off')\n",
     "        # 保存图片\n",
-    "        if save2file:\n",
-    "            plt.savefig(filename)\n",
+    "        if save2file:# 是否保存图片\n",
+    "            plt.savefig(filename)# 按图片名进行保存\n",
     "            plt.close('all')\n",
     "        # 不保存的话就显示图片\n",
     "        else:\n",
-    "            plt.show()\n",
+    "            plt.show()# 不保存 就进行显示\n",
     "\n",
     "            \n",
     "# 实例化网络的类\n",
@@ -10405,7 +10436,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -10489,7 +10522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
